--- a/chad-api/Cargo.toml
+++ b/chad-api/Cargo.toml
@@ -14,6 +14,9 @@ log = "0.4"
 once_cell = "1"
 redis = "0.21"
 reqwest = {version = "0.11", features = ["json"]}
+rust-bert = "0.16"
 serde = "1"
 serde_json = "1"
 strum = {version = "0.21", features = ["derive"]}
+tch = "0.5"
+wikipedia = "0.3"
