--- a/chad-api/Cargo.toml
+++ b/chad-api/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 authors = ["Carter Reeb <me@carteris.online>"]
-edition = "2018"
+edition = "2021"
 name = "chad-api"
 version = "0.1.0"
 
 [dependencies]
 actix-web = "4.0.0-beta.9"
+anyhow = "1"
 chrono = "0.4"
 derive_more = "0.99"
 env_logger = "0.9"
 json-gettext = "4"
 log = "0.4"
 once_cell = "1"
+parking_lot = "0.11"
 redis = "0.21"
 reqwest = {version = "0.11", features = ["json"]}
 rust-bert = "0.16"
